Subo parte de la administracion de admin y creacion de nuevas peliculas

--- a/Tp-Final-labo4/src/app/Components/admin-home/admin-home.html
+++ b/Tp-Final-labo4/src/app/Components/admin-home/admin-home.html
@@ -29,5 +29,12 @@
       <p>Revisá reportes enviados por los usuarios.</p>
     </article>
 
+        <!-- ADMINISTRAR PELÍCULAS -->
+    <article class="admin-card" (click)="goTo('movies')">
+      <h2>Administrar películas</h2>
+      <p>Agregar, ocultar o eliminar películas administradas localmente.</p>
+    </article>
+
+
   </section>
 </main>
