--- a/Tp-Final-labo4/src/app/Components/top-bar/top-bar.html
+++ b/Tp-Final-labo4/src/app/Components/top-bar/top-bar.html
@@ -30,6 +30,15 @@
 
     <!-- SOLO mostrar Perfil si hay usuario -->
     @if (activeUserSignal()) {
+      
+         <!-- IR A LA LISTA DE PERFILES -->
+      <a [routerLink]="['/profiles']" class="profile-link">
+        <span class="profile-text">Perfiles</span>
+      </a>
+
+      <!-- PERFIL PROPIO -->
+
+
     <a [routerLink]="['/profile-detail']" class="profile-link">
       <span class="profile-text">
         Perfil ({{ activeUserSignal()?.username }})
