--- a/Tp-Final-labo4/src/app/Components/profiles-list/profiles-list.html
+++ b/Tp-Final-labo4/src/app/Components/profiles-list/profiles-list.html
@@ -1,7 +1,17 @@
 <h2 class="section-title">Usuarios registrados</h2>
 
+<!-- BUSCADOR -->
+<div class="search-container">
+  <input
+    type="text"
+    placeholder="Buscar usuario por nombre..."
+    [formControl]="searchControl"
+  />
+</div>
+
+<!-- LISTA DE PERFILES -->
 <div class="profiles-container">
-  @for (user of profiles; track user.id) {
+  @for (user of filteredProfiles; track user.id) {
     <div class="profile-card">
       
       <div class="profile-info">
